--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -1,7 +1,6 @@
 .content {
   max-width: var(--max-content-width);
   padding: 16px;
-  overflow: auto;
 }
 
 @media (max-width: 1024px) {
